src/test/resources/semantic_errors/readString_assigned_to_double.notc
void main() {
    double d = readString();
}
